--- a/index.html
+++ b/index.html
@@ -3,11 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LUCHITO</title>
+    <title>Ejercicio Ramas</title>
 </head>
 <body>
-    <div class="lucho">
-        <span>AAAAAAAAAAAAAAA</span>
-    </div>
+    
 </body>
 </html>
